# stm32f407-kit-zephyr

./: LICENSE  README.md
firmware/01_LED/stm32f407-fw/: prj.conf
firmware/01_LED/stm32f407-fw/src/ap/: ap.c
firmware/01_LED/stm32f407-fw/src/hw/: hw.c  hw_def.h
firmware/02_UART/stm32f407-fw/: prj.conf
firmware/02_UART/stm32f407-fw/src/ap/: ap_def.h
firmware/02_UART/stm32f407-fw/src/hw/: hw.c  hw_def.h
firmware/03_I2C/stm32f407-i2c/src/ap/: ap.c
firmware/04_OLED/stm32f407-oled/: prj.conf
firmware/05_ENET/stm32f407-enet/: prj.conf
firmware/06_SD/stm32f407-sd/: prj.conf
firmware/07_FAT/stm32f407-fat/: README.md  prj.conf
firmware/08_WEB/stm32f407-web/: CMakeLists.txt  prj.conf
firmware/08_WEB/stm32f407-web/boards/baram/stm32f407_kit/: stm32f407_kit.dts
firmware/08_WEB/stm32f407-web/src/: main.c
firmware/08_WEB/stm32f407-web/src/ap/: ap.c
firmware/08_WEB/stm32f407-web/src/ap/modules/common/cli/: cli.c
firmware/08_WEB/stm32f407-web/src/ap/modules/web/: CMakeLists.txt  README.md  prj.conf
firmware/08_WEB/stm32f407-web/src/ap/modules/web/mongoose/: mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json
firmware/08_WEB/stm32f407-web/src/ap/modules/web/src/: main.c
firmware/08_WEB/stm32f407-web/src/bsp/: bsp.h
firmware/08_WEB/stm32f407-web/src/common/hw/include/: fatfs.h
firmware/08_WEB/stm32f407-web/src/common/hw/include/lcd/: st7567_regs.h
firmware/08_WEB/stm32f407-web/src/hw/: hw.c  hw_def.h
firmware/08_WEB/stm32f407-web/src/hw/driver/: fatfs.c  gpio.c  led.c  sd.c
(+58 files in other folders)
